Tidy up some proposal sections.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -184,3 +184,25 @@ Functional Programming},
  address = {Secaucus, NJ, USA},
  keywords = {Popl Mark, System F \&\#60; :, Typing context},
 }
+@inproceedings{Caires:2010:STI,
+ author = {Caires, Lu\'{\i}s and Pfenning, Frank},
+ title = {Session Types As Intuitionistic Linear Propositions},
+ booktitle = {Proceedings of the 21st International Conference on Concurrency Theory},
+ series = {CONCUR'10},
+ year = {2010},
+ isbn = {3-642-15374-7, 978-3-642-15374-7},
+ location = {Paris, France},
+ pages = {222--236},
+ numpages = {15},
+ url = {http://dl.acm.org/citation.cfm?id=1887654.1887670},
+ acmid = {1887670},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
+@inproceedings{Lindley:2014:SAP,
+ author = {Lindley, Sam and Morris, James G.},
+ title = {Sessions as Propositions},
+ booktitle = {},
+ series = {PLACES'14},
+ year = {2014},
+}
