Working on proposal background/approach/work plan.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -206,3 +206,20 @@ Functional Programming},
  series = {PLACES'14},
  year = {2014},
 }
+@inproceedings{Fahndrich:2002,
+ author = {F\"{a}hndrich, Manuel and DeLine, Robert},
+ title = {Adoption and Focus: Practical Linear Types for Imperative Programming},
+ booktitle = {Proceedings of the ACM SIGPLAN 2002 Conference on Programming Language Design and Implementation},
+ series = {PLDI '02},
+ year = {2002},
+ isbn = {1-58113-463-0},
+ location = {Berlin, Germany},
+ pages = {13--24},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/512529.512532},
+ doi = {10.1145/512529.512532},
+ acmid = {512532},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {heap aliasing, linear types, region-based memory management},
+}
