--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -78,41 +78,58 @@ mechanised framework for pi calculus type systems~\cite{Gay:2001:FFP} we
 shift to the lambda calculus to provide a basis on which session types for
 mainstream programming languages can be studied whilst taking advantage of
 previous proof effort and specialising only for those parts unique to the
-particular system. The framework will be heavily based on calculi developed by \citeauthor{Walder:2012}~\cite{Wadler:2012} describing a relationship between classical linear logic (based on previous work by \citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI}) and a functional session-based language (based on previous work by \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST}).
+particular system. The framework will be heavily based on calculi developed by \citeauthor{Walder:2012}~\cite{Wadler:2012} describing a relationship between classical linear logic (CP) and a functional language with session types (GV). GV is a minimal functional language supporting linearity so I believe such a basis will be general enough to support reasoning about a large class of functional languages with similar base properties.
 
-These ideas can be expanded by considering the recent work by \citeauthor{Lindley:2014:SAP} \cite{Lindley:2014:SAP} who extend GV by \cite{Wadler:2012} to HGV, supporting session forwarding, replication and polymorphism.
-
-From the generic framework, a number of directions can be explored including
+From this framework, a number of directions can be explored including
 session polymorphism, session subtyping, and permitting different forms of
-aliasing within the type system. Initially, it will be interesting to extend the work of \citeauthor{Walder:2012} to consider session polymorphism corresponding to the quantifiers in the CP process calculus
+aliasing within the type system. The recent work by \citeauthor{Lindley:2014:SAP} \cite{Lindley:2014:SAP}, who extend GV to HGV supporting session forwarding, replication and polymorphism, would be a interesting place to start when looking to add these extensions.
 
-The majority of previous session type systems for mainstream programming languages have focussed exclusively on linear type systems. One disadvantage of a linear type system is the need to re-bind objects after each operation~\cite{Gay:2010:LAST}. Principally, we intend to instantiate the framework with a type system that provides the benefits of aliasing with the guarantees of linearity, termed ``adoption and focus''. The ``adoption and focus'' type system is non-trivial requiring special language features, e.g. to manage capabilities which can be thought as a form of object liveness mechanism, so the framework design must support such flexibility by, e.g allowing the typing judgements to be extended such that the capabilities can be included in soundness results. The instantiation will demonstrate that the framework supports a wide range of languages and type systems providing researchers the ability to harness the power of formal verification in the design, implementation and documentation of session-based type systems.
+Additionally, the majority of previous session type systems for mainstream programming languages have focussed exclusively on linear type systems. One disadvantage of a linear type system is the need to re-bind objects after each operation~\cite{Gay:2010:LAST}. We could look to extend the GV type system tho provide the benefits of aliasing with the guarantees of linearity, termed ``adoption and focus'' as introduced by~\citeauthor{Fahndrich:2002} \cite{Fahndrich:2002}. The ``adoption and focus'' type system is non-trivial requiring special language features, e.g. to manage capabilities which can be thought as a form of object liveness mechanism, so the GV typing judgements must be extended such that the capabilities can be included in soundness results. A translation to CP must also be defined for the ``adopt'' and ``focus'' constructs.
+
+These extensions will argue that the framework supports a wide range of languages and type systems, providing researchers the ability to harness the power of formal verification in the design, implementation and documentation of session-based type systems.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Background Survey}
 
-present an overview of relevant previous work including articles, books, and
-existing software products. Critically evaluate the strengths and weaknesses
-of the previous work.
+%% present an overview of relevant previous work including articles, books, and
+%% existing software products. Critically evaluate the strengths and weaknesses
+%% of the previous work.
 
-Here I will briefly distinguish between pi and lambda calculi, since the majority of mechanisations have been in the pi calculus. I will then discuss the various systems which have been informally formalised. A possible outline of a plan:
+The background for this project can be categorised roughly as work on session types (sub-divided into pi and lambda calculi variants, \S \ref{sec:pis} and \S \ref{sec:lam}, respectively) and work on formal verification using proof assistants (particularly focussed on programming language mechanisation). Finally, some recent work has merged these two disciplines by verifying session-based pi calculus systems (\S \ref{sec:asts})
 
+\subsection{Session-based Type Systems and Linear Logic}\label{sec:sts}
+
+\subsubsection{In the \pi Calculus}\label{sec:pis}
+
+So we have work on pi calculus and linear logic by \citeauthor{Caires:2010:STI}~\cite{Caires:2010:STI}.
+
+\subsubsection{In the \lambda Calculus}\label{sec:lam}
+
+Simon Gay inter-process thingL
+Previous work by the same authors ... had nonstandard operational semantics due to handling of channels.
+
+The work on a linear functional language with session types by \citeauthor{Gay:2010:LAST}~\cite{Gay:2010:LAST} is the main influence for the current project from the body of work on session-based $\lambda$ calculus type systems. They provide a paper proofs of their systems type (and runtime?) safety. 
+Given the systems non-trivial features such as recursive session types (?) and buffered channels it will more difficult to extend these proofs manually. A mechanised version would provide stronger guarantees of correctness and allow others to more easily alter proofs as a result of changes made to the language.
+
+\subsubsection{Fusion}
+
+A number of systems incorporate both a functional language surface syntax with and translation to a more primitive process calculus. \citeauthor{Wadler:2012}'s recent work~\cite{Wadler:2012} fuses together a process calculus, CP, based on earlier work, on a relationship between the $\pi$ calculus and linear logic, by \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by \citeauthor{Gay:2010:LAST}. The work describes a continuation-passing style (CPS) translation from GV to CP treating session types as propositions in a classical linear logic.
+
+Other work similar in vain to ... is Lolliproc~\cite{Mazurak:2010:LCC} and classical extension to second-order logic by \citeauthor{Mazurak:2013:LPP}'s PhD thesis~\cite{Mazurak:2013:LPP}.
+
+\subsection{Mechanising Programming Language Metatheory}
+
+\subsubsection{Applications to Session-based Type Systems}\label{sec:asts}
+
+session polymorphism formalised in Coq
+
+\subsection{Formal Tidbits}
+
+Simon's pi calculus framework may be worth mentioning here
 System F-pop~\cite{Mazurak:2010:LLT}
-session polymorphism formalised in Coq, Simon's Isabelle/HOL
-development.
-Philip Wadler's Propositions as Sessions~\cite{Wadler:2012}
-Simon J. Gay and Vasco Vasconcelos (LAST)~\cite{Gay:2010:LAST}
-Lolliproc~\cite{Mazurak:2010:LCC}
-\citeauthor{Mazurak:2013:LPP}'s PhD thesis~\cite{Mazurak:2013:LPP}
-
-Roughly can be split into
-
-type systems (pi and lambda)
-
-session type mechanisations
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Proposed Approach}
+\section{Proposed Approach}\label{sec:approach}
 
 state how you propose to solve the software development problem. Show that
 your proposed approach is feasible, but identify any risks.
@@ -121,6 +138,9 @@ First order approach taken - represent bound variables as de Bruijn indices
 In contrast to a higher-order approach
 though the first-order encoding has its disadvantages namely one has to reason about variable substitution since without a higher-order approach this is not handled automatically by the meta-language
 the locally nameless representation is chosen with a few simplifying assumptions regarding variable substitution and closed terms
+
+One may need to avoid certain tricky formulations. For instance, instead of providing n-ary branch and choice in GV, we provide only binary versions of these operators to simplify the development. This change is not restrictive however, since CP itself provides only binary versions of $\par$ and $&$. Likewise, on a more technical note, we almagmate all types into one inductive definition and provide a predicate for restricting propositions to consider only valid session types. \citeauthor{Wadler:2012} defines the GV grammar as a mutually recursive; session types are types which may contain types as subcomponents (arguments to send, for example). Unfortunately, handling mutually inductive definitions in Coq can be quite involved; requiring one to rely on the Coq system being able to provide a stronger mutual induction principle or defining one manual. Such a definition is possible, but it complicates elimination via the induction principle.
+( since the standard induction tactic will not work?)
 
 Engineering Formal Metatheory
 Abstract:
@@ -143,9 +163,6 @@ the calculus of constructions. The formalisations followed the POPLMARK
 challenge (type soundness, preservation, progress).
 
 
-HOAS Coq formalisation using Metatheory library from UPenn.
-Explain why this approach was taken versus intrinsic encoding of the terms
-
 The intrinsic encoding as described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one approach for encoding programming languages based on the lambda calculus. The key idea here is that terms are indexed by their type so as to prevent ill-formed terms from being constructed. However, in the encoding for GV there are issues with using this encoding: $(1)$ it is not immediately clear how to handle linear contexts using the de Bruijn variable encoding, since in the instrinic setting the environment supports weakening; $(2)$ an instrinic encoding of terms would be complicated by the need to enforce session types occur in certain instances (by use of a predicate); and $(3)$ well-typed terms require extra assumptions about binder freshness which cannot reasonably be expressed as a function type. For these reasons, an instrinic approach does not offer much benefit since a well-typed term relation would still need to be defined. I chose the ..... encoding
 
 
@@ -155,8 +172,9 @@ The intrinsic encoding as described by~\citeauthor{Benton:2012:STT}~\cite{Benton
 show how you plan to organize your work, identifying intermediate deliverables
 and dates.
 
-I need to perform some formalisation of the system. I should identify the key
-issues (linear typing, bindings (as claimed in the literature), etc).
+I aim to have completed the GV and CP definitions complete with reduction and commuting conversion rules for CP by the end of December. This will require definition of infrastructure for handling binders for both GV, CP channels and CP propositional variables; I hope to be able to generalise as much as possible with the help of the UPenn Metatheory library.
+
+It remains to define the translation between GV and CP which I envisage will be the bulk of the work, requiring several rules on typing derivations; I envisage being able to define these as inductive datatype constructors.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
