Tweaking the pi-calculus section.

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -102,7 +102,7 @@ The background for this project can be categorised roughly as work on session ty
 
 \subsubsection{In the $\pi$-calculus}\label{sec:pis}
 
-\citeauthor{Caires:2010:STI} \cite{Caires:2010:STI} present a connection between $\pi$-calculus type system with session types and intuitionistic linear logic. They equate linear propositions with session types of the process calculus via a bidirectional translation relation. They use a labelled transition system to represent process reduction with observable actions on channels. They represent dual intuitionistic linear logic as a sequent calculus providing logical connectives which have session-based interpretations. Process reduction steps are equated with proof reduction via cut elimination. The relationship with intuitionistic linear logic provides absence of deadlocks in session-based communication for the process calculus.
+\citeauthor{Caires:2010:STI} \cite{Caires:2010:STI} present a connection between $\pi$-calculus type system with session types and intuitionistic linear logic. They equate linear propositions with session types of the process calculus via a bidirectional translation relation. They use a labelled transition system to represent process reduction with observable actions on channels. They represent dual intuitionistic linear logic as a sequent calculus providing logical connectives which have session-based interpretations. Process reduction steps are equated with proof reduction via cut elimination. The relationship with intuitionistic linear logic provides absence of deadlocks in session-based communication for the process calculus. The correspondence of session types to linear logic propositions is an important step in providing a solid logical foundation for a concurrent type theory; in the same way ``sequential'' type theory ($\lambda$-calculi) profitted from a logical perspective. However, for session types to become a more usable tool for programming distributed communication systems (the ultimate goal, of course, is to write more correct programs), we cannot be expected to program directly in the $\pi$-calculus; a more mainstream programming paradigm must be built upon these solid logical foundations. With that in mind, enter the $\lambda$-calculus!
 
 \subsubsection{In the $\lambda$-calculus}\label{sec:lam}
 
