Completed draft of background: onto approach + work plan.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -223,3 +223,44 @@ Functional Programming},
  address = {New York, NY, USA},
  keywords = {heap aliasing, linear types, region-based memory management},
 }
+@article{Goto:2014,
+ author = {Goto,Matthew and Jagadeesan,Radha and Jeffrey,Alan and Pitcher,Corin 
+and Riely,James},
+ title = {An Extensible Approach to Session Polymorphism},
+ journal = {Mathematical Structures in Computer Science, Special Issue on Behavioural Types},
+ year = {2014},
+ note = {To appear.},
+}
+@article{Gay:2005:SST,
+ author = {Gay, Simon and Hole, Malcolm},
+ title = {Subtyping for Session Types in the Pi Calculus},
+ journal = {Acta Inf.},
+ issue_date = {November 2005},
+ volume = {42},
+ number = {2},
+ month = nov,
+ year = {2005},
+ issn = {0001-5903},
+ pages = {191--225},
+ numpages = {35},
+ url = {http://dx.doi.org/10.1007/s00236-005-0177-z},
+ doi = {10.1007/s00236-005-0177-z},
+ acmid = {1104646},
+ publisher = {Springer-Verlag New York, Inc.},
+ address = {Secaucus, NJ, USA},
+}
+@inproceedings{Delahaye:2000:TLS,
+ author = {Delahaye, David},
+ title = {A Tactic Language for the System Coq},
+ booktitle = {Proceedings of the 7th International Conference on Logic for Programming and Automated Reasoning},
+ series = {LPAR'00},
+ year = {2000},
+ isbn = {3-540-41285-9},
+ location = {Reunion Island, France},
+ pages = {85--95},
+ numpages = {11},
+ url = {http://dl.acm.org/citation.cfm?id=1765236.1765246},
+ acmid = {1765246},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
