--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -1,6 +1,11 @@
 \documentclass{mprop}
 
+% Include Coq lstlisting language definition and things upon which it depends.
+\usepackage{macros}
+
 \usepackage{hyperref}
+\usepackage{listings}
+\usepackage{lstcoq}
 \usepackage{graphicx}
 \usepackage{cmll}
 \usepackage[style=alphabetic,natbib=true,maxbibnames=100]{biblatex}
@@ -114,10 +119,14 @@ The work on a linear functional language with session types by \citeauthor{Gay:2
 
 A number of systems incorporate both a functional language surface syntax with and translation to a more primitive process calculus. We shall focus on two such systems presented recently which have a connection to linear logic.
 
-Lolliproc~\cite{Mazurak:2010:LCC} provides a functional language with concurrency primitives as a surface syntax on top of an underlying process calculus. The process calculus provides classial linear logical interpretation for the functional language, utilising double negation elimination to provide session type duality. Concurrency is provided by control operators which, respectively, spawn a child process and wait for a child process to completed. The spawning process creates a channel between parent and child process; a channel is represented as a continuation and the type denotes the communication protocol (i.e. session type) between parent and child. The surface syntax is an effective abstraction layer for the programmer since it does not expose the underlying process calculus. The system has proofs for type safety, strong normalisation and confluence. Confluence provides the guarantee that no race conditions can occur, strong normalisation prohibits nonterminating programs and type safety assures deadlock freedom. Deadlock-freedom is implied by the acyclic communication graphs (progress of process reduction) which occur between parallel processes; follows from permitting only one channel between two halves of parallel composition construct in $\pi$-calculus. Most of the development is supported by Coq proof scripts with remaining issues due to reasoning about communication graphs. The development does not provide primitive send and receives; instead, these are encoded as linear functions. 
+Lolliproc~\cite{Mazurak:2010:LCC} provides a functional language with concurrency primitives as a surface syntax on top of an underlying process calculus. The process calculus provides classial linear logical interpretation for the functional language, utilising double negation elimination to provide session type duality. The surface syntax is an effective abstraction layer for the programmer since it does not expose the underlying process calculus.
+
+Concurrency is provided by control operators which, respectively, spawn a child process and wait for a child process to completed. The spawning process creates a channel between parent and child process; a channel is represented as a continuation and the type denotes the communication protocol (i.e. session type) between parent and child.
+
+\citeauthor{Mazurak:2010:LCC} present proofs for type safety, strong normalisation and confluence. Confluence provides the guarantee that no race conditions can occur, strong normalisation prohibits nonterminating programs and type safety assures deadlock freedom. Deadlock-freedom is implied by the acyclic communication graphs (progress of process reduction) which occur between parallel processes; follows from permitting only one channel between two halves of parallel composition construct in $\pi$-calculus. Most of the development is supported by Coq proof scripts with remaining issues due to reasoning about communication graphs. The development does not provide primitive send and receives; instead, these are encoded as linear functions. 
 %% and classical extension to second-order logic by \citeauthor{Mazurak:2013:LPP}'s PhD thesis~\cite{Mazurak:2013:LPP}.
 
-\citeauthor{Wadler:2012}'s recent work~\cite{Wadler:2012} brings together a process calculus, CP, based on the earlier work by \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by \citeauthor{Gay:2010:LAST}. The work describes a continuation-passing style (CPS) translation from GV to CP treating session types as propositions in a classical linear logic. The process calculus is slightly different to that described in the $\pi$DILL~\cite{Caires:2010:STI}, apart from being classical in nature, the constructs for server replication are modified; CP provides a weakening and contraction rules whereas these are encode in one rule for process reduction by \citeauthor{Caires:2010:STI}. Additionally, rather than a sequent calculus, \citeauthor{Walder:2012} uses a natural deduction style for defining the process calculus. As presented, GV does not support all features of CP and thus the translation is one way (GV to CP). \citeauthor{Lindley:2014:SAP}~\cite{Lindley:2014:SAP} extend GV to provide support for polymorphism and replication, following a similar CPS translation scheme.
+\citeauthor{Wadler:2012}'s recent work~\cite{Wadler:2012} brings together a process calculus, CP, based on the earlier work by \citeauthor{Caires:2010:STI} with a functional language, GV, based on LAST by \citeauthor{Gay:2010:LAST}. The work describes a continuation-passing style (CPS) translation from GV to CP treating session types as propositions in a classical linear logic. The process calculus is slightly different to that described in the $\pi$DILL~\cite{Caires:2010:STI}, apart from being classical in nature, the constructs for server replication are modified; CP provides a weakening and contraction rules whereas these are encode in one rule for process reduction by \citeauthor{Caires:2010:STI}. Additionally, rather than a sequent calculus, \citeauthor{Wadler:2012} uses a natural deduction style for defining the process calculus. As presented, GV does not support all features of CP and thus the translation is one way (GV to CP). \citeauthor{Lindley:2014:SAP}~\cite{Lindley:2014:SAP} extend GV to provide support for polymorphism and replication, following a similar CPS translation scheme.
 
 %% Wadler also dispenses with the structural rules; subsumed by the Assoc and Swap typing derivations and the cut reduction (double check why he does this)
 
@@ -133,10 +142,18 @@ metatheory/poplmark papers.
 
 \subsection{Formal Tidbits}
 
-While not related to session-based type systems
-\citeauthor{Gay:2001:FFP} provides a $\pi$-calculus framework in Isabelle/HOL
-had the aim of mechanising in mind for session type support with linear and non-linear type system design
-name introduction in proof development from custome user-defined tactics are an issue. in coq one can specify the names directly and allow custom tactics to receive arguments for names. generally setting the hypotheses up correctly will provide suitable names automatically and it is only during destruction of some hypotheses that Coq may generate unsuitable names
+While not related to session-based type systems \citeauthor{Gay:2001:FFP} provides a $\pi$-calculus framework mechanised in Isabelle/HOL. The aim is to build a mechanisaton of session-based type systems on top of the $\pi$-calculus framework. The use of de Bruijn indices for both bound and free variables causes issues with variable substitution often requiring permutation of typing environments (see \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} for a discussion on binder representations) and lifting of free variables during substitution; we avoid this issue in our representation choice (\S \ref{sec:approach}).
+
+%% Channel endpoints are represented as a polarity on a name. The polarities are not constrained to have the same type as each other but must be unique in the typing enviornment. 
+
+The introduction of names for hypotheses during execution of custom tactics are an issue in the proof development. These names are automatically generated by the Isabelle/HOL system which creates a dependency between the names chosen and the tactic. Thus, one must be careful to use the exact names expected by the tactic. In the Coq proof assistant, defining custom tactics can be achieved using the Ltac language~\cite{Delahaye:2000:TLS}. Among other things, Ltac supports for pattern matching on hypotheses and goal forms. Thus, if we wished to pattern match on an inductive type describing variables, we could do so without mentioning the actual variable name as follows:
+
+\begin{coq}
+Ltac my_tactic :=
+  match goal with
+  | [v: var |- _] => ... tactics here possibly mentioning `v' hypothesis ...
+  end.
+\end{coq}
 
 % System F-pop~\cite{Mazurak:2010:LLT}
 
@@ -145,6 +162,8 @@ name introduction in proof development from custome user-defined tactics are an 
 
 state how you propose to solve the software development problem. Show that
 your proposed approach is feasible, but identify any risks.
+
+ %% Additionally, we make some simplifying assumptions about substitution for bound variables to avoid the lifting constructs defined by~\citeauthor{Gay:2001:FFP} in this work.
 
 I intend to mechanise the calculi described by \citeauthor{Wadler:2012}~\cite{Wadler:2012} using the Coq proof assistant.
 
