--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -7,6 +7,7 @@
 \usepackage{listings}
 \usepackage{lstcoq}
 \usepackage{graphicx}
+\usepackage{xspace}
 \usepackage{cmll}
 \usepackage[style=alphabetic,natbib=true,maxbibnames=100]{biblatex}
 \addbibresource{proposal.bib}
@@ -18,6 +19,7 @@
 % and see documentation for commands
 %\usepackage{fancyheadings}
 
+\newcommand{\fpop}{System F${}^\circ$\xspace}
 
 % other potentially useful packages
 %\uspackage{amssymb,amsmath}
@@ -29,7 +31,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Formalisation of Session-based Lambda Calculus Type Systems}
+\title{Mechanisation of Session-based Lambda Calculus Type Systems}
 \author{Craig McLaughlin}
 \date{\today}
 \maketitle
@@ -56,21 +58,7 @@ Encoding communication protocols as \textit{session types} is one approach to ac
 
 In programming language research, work on static type systems is usually presented on paper complete with informal proofs of correctness for the system properties. Most types systems in the session types community have been developed in this way. However, it is more difficult to extend work using this approach as may be unclear how changes affect proofs and one will typically have to re-consider all proofs to be convinced the properties still hold. More generally, unassisted formalisms are error-prone to develop and do not provide a firm basis upon which other researchers can experiment; often it will require ``rolling your own'' compiler for the language of interest.
 
-Proof assistants such as Coq~\cite{Coq:manual} offer a platform on which to develop programming languages and type systems and associated proofs of properties with strong guarantees of correctness. Not only is proving with a proof assistant much less error-prone than the unaided approach, it also eases extension of the system since the proof assistant will highlight parts of proofs that have been affected by changes. However, one may have to prove more properties using this approach since this setting does not permit appealing to human intuition. For example, alpha-equivalence and freshness and binders are usually assumed in informal presentations, whereas in the mechanised setting one has to explicitly encode and reason about these properties~\cite{Aydemir:2005:MMM, Aydemir:2008:EFM}.
-
-Interactive theorem proving and proof assistants has seen an upsurge in use in recent years. Especially within the domain of programming language research, there is a strong emphasis on providing mechanised proofs accompanying work in the area. Indeed, \citeauthor{Aydemir:2005:MMM} have published a series of challenges on mechanising programming languages aimed at providing a starting point for comparing different representation techniques~\cite{Aydemir:2005:MMM}. Another aim is to provide reusable libraries for common reasoning needed across programming language developments, e.g. handling of typing environments. This effort has resulted in a number of different approaches for representing programming languages within proof assistants. For instance, \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} present a representation of lambda calculi where bound variables are represented as \textit{de Bruijn indices}~\footnote{A de Bruijn index is a number used to represent a bound variable which indicates the position of its binder (starting from zero for the innermost binder). For example, $\lambda~(\lambda~1)$ corresponds to $\lambda x. \lambda y. x$, i.e. the constant function.} and free variables are represented as named terms; the \textit{locally nameless} representation. Their work resulted in a library for handling commonly occurring aspects in programming lanuage metatheory which has been used since in other developments~\cite{Park:2014:MMW}. Resuable libaries reduce the proof engineering effort needed for later works, in contrast to the pen-and-paper approach, and some proof assistants (as is the case with Coq) allow one to extract a program from the development which can provide a typechecker or compiler for the language formalised~\footnote{Curry-Howard strikes again; a proof of decidability of typechecking corresponds to a program implementing a typechecker for the language.}
-
-%% Most research on session type systems has consisted of an informal presentation of the languages being defined. That is, the semantics and proofs are performed manually rather than aided by a proof assistant.
-
-%% POPLMARK
-%% save on proof engineering effort as is championed by the POPLMARK challenge aimed at reducing the effort for researchers to code programming language metatheory it provides a library needed to perform various things define various parts of programming languages viewed to be difficult to formalise including handling binders and freshness they also mention handling of linear typing but renege on actually formulating this as part of their challenge they insist it is a future work here is the future
-%% Metatheory library
-
-%% correctness and something what else could we say i think it would appropriate
-%% to mention that the session types studied so far include both pi and lambda
-%% calculi and it may be beneficil if the reader was informed also the pi
-%% calculus paradigms do not fit well into the existing mainstream programming
-%% language paradigms this seems like it should be in the statement of the problem section down below also i should read more of jtod's slides because this writing just keep writing malarky might just be what i need to pound out the pages because it eliminates thoughts as they come into the head what else adopt and focus we have in the problem statement but perhaps those paragraphs should be re-jigged for up here multithreaded functional programming with linear typing for session types a number of these systems use different type systems but they are based on all the lambda calculus fundamentally so to have a generic framework to encode these variants would 
+Proof assistants such as Coq~\cite{Coq:manual} offer a platform on which to develop programming languages and type systems and associated proofs of properties with strong guarantees of correctness. Not only is proving with a proof assistant much less error-prone than the unaided approach, it also eases extension of the system since the proof assistant will highlight parts of proofs that have been affected by changes. However, one may have to prove more properties using this approach since this setting does not permit appealing to human intuition. For example, alpha-equivalence and freshness of binders are usually assumed in informal presentations, whereas in the mechanised setting one has to explicitly encode and reason about these properties~\cite{Aydemir:2005:MMM, Aydemir:2008:EFM}.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Statement of Problem}
@@ -132,19 +120,11 @@ Concurrency is provided by control operators which, respectively, spawn a child 
 
 \subsection{Mechanising Programming Language Metatheory}
 
-metatheory/poplmark papers.
+Interactive theorem proving and proof assistants have seen an upsurge in use in recent years. Especially within the domain of programming language research, there is a strong emphasis on providing mechanised proofs accompanying work in the area. Indeed, \citeauthor{Aydemir:2005:MMM} have published a series of challenges on mechanising programming languages aimed at providing a starting point for comparing different representation techniques~\cite{Aydemir:2005:MMM}. Another aim is to provide reusable libraries for common reasoning needed across programming language developments, e.g. handling of typing environments. This effort has resulted in a number of different approaches for representing programming languages within proof assistants. For instance, \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} present a representation of lambda calculi where bound variables are represented as \textit{de Bruijn indices}~\footnote{A de Bruijn index is a number used to represent a bound variable which indicates the position of its binder (starting from zero for the innermost binder). For example, $\lambda~(\lambda~1)$ corresponds to $\lambda x. \lambda y. x$, i.e. the constant function.} and free variables are represented as named terms; the \textit{locally nameless} representation. Their work resulted in a library for handling commonly occurring aspects in programming lanuage metatheory which has been used since in other developments~\cite{Park:2014:MMW}. Resuable libaries reduce the proof engineering effort needed for later works, in contrast to the pen-and-paper approach, and some proof assistants (as is the case with Coq) allow one to extract a program from the development which can provide a typechecker or compiler for the language formalised~\footnote{Curry-Howard strikes again; a proof of decidability of typechecking corresponds to a program implementing a typechecker for the language.}
 
-\subsubsection{Applications to Session-based Type Systems}\label{sec:asts}
+Some recent mechanisation effort focuses on providing a basis for studying linearity within type systems. This work is of interest to the current project since most session-based type systems assume a strictly linear type system which requires re-binding of channel identifiers, such as in the functional setting of \citeauthor{Gay:2010:LAST}. As discussed previously, it would be interesting to study the system described by~\citeauthor{Fahndrich:2002}~\cite{Fahndrich:2002}, yet the system is specific to their ``adopt'' and ``focus'' constructs and is not mechanised. \citeauthor{Mazurak:2010:LLT} present an extension to System F with a notion describing types as having linear or non-linear \textit{kind}~\cite{Mazurak:2010:LLT}. This extension is motivated by previous work on incorporating linearity into type systems. Overall, previous attempts either hamper the inclusion of desirable programming features (such as polymorphism), or do not adequately reflect non-linearity as the common case leading to awkward programming. \fpop avoids these deficiencies by categorising types into kinds whilst maintaining similar semantics to System F. Mechanised proofs for type soundness and parametricity are presented, and the semantics allow non-linear types to be treated as linear. Examples show the system can provide a wide range of permissions on interfaces, from full exclusive access to read-only shared references. It would be interesting to see if one could encode the ``adopt'' and ``focus'' constructs in this system. The ``adopt'' rule cannot be encoded similarly to the ShareRef example~\cite{Mazurak:2010:LLT}. It's not immediately clear how to encode the ``focus'' rule within the present semantics, as one needs to prevent non-linear access to its argument implying knowledge of aliasing within the typing judgements; absence of aliasing is not identified with linear kinded types in \fpop.
 
-%\citeauthor{
-%An extensible approach to session polymorphism
-\citeauthor{Goto:2014}~\cite{Goto:2014} provide a $\pi$-calculus session-based type system providing session polymorphism. The system is more general than session polymorphism via subtyping~\cite{Gay:2005:SST}. The authors mechanise their type system and its properties in the Coq proof assistant. However, the system mechanised is restricted to the $\pi$-calculus and the main focus is proving soundness properties for the deduction rules allowing polymorphism on input, rather than a more general basis for studying programming with session types.
-
-\subsection{Formal Tidbits}
-
-While not related to session-based type systems \citeauthor{Gay:2001:FFP} provides a $\pi$-calculus framework mechanised in Isabelle/HOL. The aim is to build a mechanisaton of session-based type systems on top of the $\pi$-calculus framework. The use of de Bruijn indices for both bound and free variables causes issues with variable substitution often requiring permutation of typing environments (see \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} for a discussion on binder representations) and lifting of free variables during substitution; we avoid this issue in our representation choice (\S \ref{sec:approach}).
-
-%% Channel endpoints are represented as a polarity on a name. The polarities are not constrained to have the same type as each other but must be unique in the typing enviornment. 
+While not related to programming language metatheory, \citeauthor{Gay:2001:FFP} provides a $\pi$-calculus framework mechanised in Isabelle/HOL. The aim is to build a mechanisaton of session-based type systems on top of the $\pi$-calculus framework. The use of de Bruijn indices for both bound and free variables causes issues with variable substitution often requiring permutation of typing environments (see \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} for a discussion on binder representations) and lifting of free variables during substitution; we avoid this issue in our representation choice (\S \ref{sec:approach}).
 
 The introduction of names for hypotheses during execution of custom tactics are an issue in the proof development. These names are automatically generated by the Isabelle/HOL system which creates a dependency between the names chosen and the tactic. Thus, one must be careful to use the exact names expected by the tactic. In the Coq proof assistant, defining custom tactics can be achieved using the Ltac language~\cite{Delahaye:2000:TLS}. Among other things, Ltac supports for pattern matching on hypotheses and goal forms. Thus, if we wished to pattern match on an inductive type describing variables, we could do so without mentioning the actual variable name as follows:
 
@@ -155,13 +135,15 @@ Ltac my_tactic :=
   end.
 \end{coq}
 
-% System F-pop~\cite{Mazurak:2010:LLT}
+\subsubsection{Applications to Session-based Type Systems}\label{sec:asts}
+
+\citeauthor{Goto:2014}~\cite{Goto:2014} provide a $\pi$-calculus session-based type system providing session polymorphism. The system is more general than session polymorphism via subtyping~\cite{Gay:2005:SST}. The authors mechanise their type system and its properties in the Coq proof assistant. However, the system mechanised is restricted to the $\pi$-calculus and the main focus is proving soundness properties for the deduction rules allowing polymorphism on input, rather than a more general basis for studying programming with session types.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Proposed Approach}\label{sec:approach}
 
-state how you propose to solve the software development problem. Show that
-your proposed approach is feasible, but identify any risks.
+%% state how you propose to solve the software development problem. Show that
+%% your proposed approach is feasible, but identify any risks.
 
  %% Additionally, we make some simplifying assumptions about substitution for bound variables to avoid the lifting constructs defined by~\citeauthor{Gay:2001:FFP} in this work.
 
