Completed draft of approach.

--- a/proposal/proposal.bib
+++ b/proposal/proposal.bib
@@ -202,7 +202,6 @@ Functional Programming},
 @inproceedings{Lindley:2014:SAP,
  author = {Lindley, Sam and Morris, James G.},
  title = {Sessions as Propositions},
- booktitle = {},
  series = {PLACES'14},
  year = {2014},
 }
@@ -263,4 +262,21 @@ and Riely,James},
  acmid = {1765246},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
+}
+@inproceedings{Chlipala:2008:PHOAS,
+ author = {Chlipala, Adam},
+ title = {Parametric Higher-order Abstract Syntax for Mechanized Semantics},
+ booktitle = {Proceedings of the 13th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '08},
+ year = {2008},
+ isbn = {978-1-59593-919-7},
+ location = {Victoria, BC, Canada},
+ pages = {143--156},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1411204.1411226},
+ doi = {10.1145/1411204.1411226},
+ acmid = {1411226},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {compiler verification, dependent types, interactive proof assistants, type-theoretic semantics},
 }
