--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -145,41 +145,18 @@ Ltac my_tactic :=
 %% state how you propose to solve the software development problem. Show that
 %% your proposed approach is feasible, but identify any risks.
 
- %% Additionally, we make some simplifying assumptions about substitution for bound variables to avoid the lifting constructs defined by~\citeauthor{Gay:2001:FFP} in this work.
+I intend to mechanise the calculi described by \citeauthor{Wadler:2012}~\cite{Wadler:2012} using the Coq proof assistant. In the spirit of the POPLMARK challenge, I aim to utilise available libraries and infrastructure as much as possible. \citeauthor{Aydemir:2008:EFM} developed a metatheory library for handling, among other things, association lists (environments) and free variable representation. I intend to use the version distributed by~\citeauthor{Park:2014:MMW}~\cite{Park:2014:MMW} which has been updated for Coq version 8.4pl4. \citeauthor{Park:2014:MMW} describe a technique for removing nonlinear contexts from typing judgements. While their work extended to \fpop it is not clear how to handle an environment containing both non-linear and linear types as in GV. I wish to maintain as close a relationship as possible to the paper system presented by \citeauthor{Wadler:2012}, so separating out the non-linear and linear components is not an option at this stage.
 
-I intend to mechanise the calculi described by \citeauthor{Wadler:2012}~\cite{Wadler:2012} using the Coq proof assistant.
+Following \citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, I use the locally nameless first-order representation for binders and free variables, preventing variable capture issues present in other first-order representations. Likewise, I make some simplifying assumptions about variable substitution, namely that \textit{closed} terms (terms with no unbound indices) are substituted for variables, which avoids having to define lifting constructs on the substitute term. The typing rules will not contain a rule for an unbound index so this decision is sound. A consequence is that we must define a notion of opening language terms involving binders as described by~\citeauthor{Aydemir:2008:EFM}. For example, an abstraction consists of a term $t$ which is well-typed when its unbound index, representing the argument to the abstraction, is replaced by some fresh variable $x$, written $t^x$. Some terms in GV require multiple binders but I believe it will be straightforward to extend this notion. Unfortunately, I must define similar operations on CP terms and handle substitution and opening on them as well as propositions which can accept propositional variables. I hope to be able to generalise as much as possible with the help of the UPenn Metatheory library. Alternatively, I could have chosen a higher-order abstract syntax (HOAS) approach such as the parametric version (PHOAS) described by~\citeauthor{Chlipala:2008:PHOAS}~\cite{Chlipala:2008:PHOAS}. PHOAS relies on the metalanguage (Coq, in this case) for handling binders and substitution so has less overhead in managing syntax than the locally nameless approach. However, variables are now parameters defined at the level of the metalanguage so can represent terms not valid in the language being mechanised. Further, a higher-order approach would prevent the use of the Metatheory library which provides a number of useful tactics for manipulating typing contexts.
 
-First order approach taken - represent bound variables as de Bruijn indices
-In contrast to a higher-order approach
-though the first-order encoding has its disadvantages namely one has to reason about variable substitution since without a higher-order approach this is not handled automatically by the meta-language
-the locally nameless representation is chosen with a few simplifying assumptions regarding variable substitution and closed terms
+For handling binder freshness, I chose to adopt the cofinite quantification approach described by~\cite{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM}, which excludes a finite set of variables from being considered as the binder. In contrast, the traditional ``exists-fresh'' approach, where the binder is only required to be fresh within the abstraction's body, does not produce strong enough induction principles in some cases.
 
-One may need to avoid certain tricky formulations. For instance, instead of providing n-ary branch and choice in GV, we provide only binary versions of these operators to simplify the development. This change is not restrictive however, since CP itself provides only binary versions of plus ($\oplus$) and with ($\with$) constructs. Likewise, on a more technical note, we almagmate all types into one inductive definition and provide a predicate for restricting propositions to consider only valid session types. \citeauthor{Wadler:2012} defines the GV grammar as a mutually recursive; session types are types which may contain types as subcomponents (arguments to send, for example). Unfortunately, handling mutually inductive definitions in Coq can be quite involved; requiring one to rely on the Coq system being able to provide a stronger mutual induction principle or defining one manual. Such a definition is possible, but it complicates elimination via the induction principle.
-( since the standard induction tactic will not work?)
+While the aim is to be faithful to \citeauthor{Wadler:2012}'s description, I may need to alter the approach slightly to avoid tricky formulations. For instance, instead of providing n-ary branch and choice in GV, we provide only binary versions of these operators to simplify the development. This change is not restrictive however, since CP itself provides only binary versions of plus ($\oplus$) and with ($\with$) constructs. Likewise, on a more technical note, we almagmate all types into one inductive definition and provide a predicate for restricting typing rules to consider only valid session types. \citeauthor{Wadler:2012} defines GV types as a set of mutually recursive definitions; session types are types which may contain types as subcomponents (arguments to send, for example). Unfortunately, handling mutually inductive definitions in Coq can be quite involved; requiring one to either rely on the Coq system to provide a stronger mutual induction principle or defining one manually. Such a definition is possible, but it complicates elimination via the induction principle.
+% ( since the standard induction tactic will not work?)
 
-Engineering Formal Metatheory
-Abstract:
+Another aspect of the encoding is how to define terms. The intrinsic encoding described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one approach, indexing terms by their type so as to prevent ill-formed terms from being constructed. However, in the encoding for GV there are issues with using this encoding: $(1)$ it is not immediately clear how to handle linear contexts using the de Bruijn variable encoding, since in the instrinic setting the environment supports weakening; $(2)$ an instrinic encoding of terms would be complicated by the need to enforce that session types occur in certain instances (by use of a predicate); and $(3)$ well-typed terms require extra assumptions about binder freshness which cannot reasonably be expressed as a function type. For these reasons, an instrinic approach does not offer much benefit since a well-typed term relation would still need to be defined. Therefore, I chose an extrinsic encoding for terms and define well-typed terms as a separate inductive type.
 
-Formalising programming languages within a proof assistant is becoming a
-more widely adopted convention within the research community in lieu of hand
-written proofs.
-
-Review:
-
-Discussing issues in engineering metatheory for programming languages.
-Focus was on the locally nameless representation for binders with names
-for free variables and de Brujin indices for bound variables. There was
-also novel use of cofinite quantification to rules with bindings to increase
-the strength of the induction principles and reduce the amount of renaming
-of bound variables (due to freshness issues) significantly. The theory was
-tested with formalisations of the simply-typed lambda calculus,
-System $F_{<:}$,
-the calculus of constructions. The formalisations followed the POPLMARK
-challenge (type soundness, preservation, progress).
-
-
-The intrinsic encoding as described by~\citeauthor{Benton:2012:STT}~\cite{Benton:2012:STT} is one approach for encoding programming languages based on the lambda calculus. The key idea here is that terms are indexed by their type so as to prevent ill-formed terms from being constructed. However, in the encoding for GV there are issues with using this encoding: $(1)$ it is not immediately clear how to handle linear contexts using the de Bruijn variable encoding, since in the instrinic setting the environment supports weakening; $(2)$ an instrinic encoding of terms would be complicated by the need to enforce session types occur in certain instances (by use of a predicate); and $(3)$ well-typed terms require extra assumptions about binder freshness which cannot reasonably be expressed as a function type. For these reasons, an instrinic approach does not offer much benefit since a well-typed term relation would still need to be defined. I chose the ..... encoding
-
+\citeauthor{Aydemir:2008:EFM}~\cite{Aydemir:2008:EFM} note that the size of their language proof infrastructure is proportional to the number of binding constructs. In the case of a simply typed lambda calculus this is not onerous, but GV has four binding constructs, CP has six and propositions have two. It may be true that this approach results in too many auxiliary definitions and operations not relevant to the actual properties one wishes to prove. However, I believe that once this infrastructure has been defined, the system can be extended without concern for binders.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Work Plan}
@@ -187,7 +164,7 @@ The intrinsic encoding as described by~\citeauthor{Benton:2012:STT}~\cite{Benton
 show how you plan to organize your work, identifying intermediate deliverables
 and dates.
 
-I aim to have completed the GV and CP definitions complete with reduction and commuting conversion rules for CP by the end of December. This will require definition of infrastructure for handling binders for both GV, CP channels and CP propositional variables; I hope to be able to generalise as much as possible with the help of the UPenn Metatheory library.
+I aim to have completed the GV and CP definitions complete with reduction and commuting conversion rules for CP by the end of December. This will require definition of infrastructure for handling binders for both GV, CP channels and CP propositional variables; 
 
 It remains to define the translation between GV and CP which I envisage will be the bulk of the work, requiring several rules on typing derivations; I envisage being able to define these as inductive datatype constructors.
 
